[package]
name = "anthropic-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Official Rust SDK for the Anthropic API"
license = "MIT"
repository = "https://github.com/byigitt/anthropic-sdk-rust"
documentation = "https://docs.rs/anthropic-sdk"
readme = "README.md"
keywords = ["anthropic", "claude", "ai", "llm", "api"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[features]
default = []
blocking = []

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "tool_use"
path = "examples/tool_use.rs"
